[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/Background.png" type="Texture" id=3]
[ext_resource path="res://Sounds/music.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/shot_1.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/explosion_2.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/explosion_spaceship.wav" type="AudioStream" id=7]

[node name="main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="UI" parent="." index="0" instance=ExtResource( 2 )]

[node name="Background" type="Sprite" parent="." index="1"]

position = Vector2( 511.889, 309.687 )
scale = Vector2( 0.626134, 0.596795 )
texture = ExtResource( 3 )

[node name="p0" type="Position2D" parent="." index="2"]

position = Vector2( 94.6284, 94.106 )
_sections_unfolded = [ "Transform" ]

[node name="p1" type="Position2D" parent="." index="3"]

position = Vector2( 500.424, 135.513 )

[node name="p2" type="Position2D" parent="." index="4"]

position = Vector2( 919.364, 513.11 )

[node name="p3" type="Position2D" parent="." index="5"]

position = Vector2( 172.932, 502.969 )

[node name="p4" type="Position2D" parent="." index="6"]

position = Vector2( 903.985, 93.1502 )

[node name="p5" type="Position2D" parent="." index="7"]

position = Vector2( 550.09, 540.864 )

[node name="p6" type="Position2D" parent="." index="8"]

position = Vector2( 837.481, 280.786 )

[node name="p7" type="Position2D" parent="." index="9"]

position = Vector2( 56.0612, 292.662 )

[node name="p8" type="Position2D" parent="." index="10"]

position = Vector2( 657.683, 64.8862 )

[node name="p9" type="Position2D" parent="." index="11"]

position = Vector2( 246.785, 49.4478 )

[node name="music" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="shotting_sound" type="AudioStreamPlayer2D" parent="." index="13"]

position = Vector2( 246.785, 49.4478 )
stream = ExtResource( 5 )
volume_db = -0.04
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="explosion_sound" type="AudioStreamPlayer2D" parent="." index="14"]

position = Vector2( 246.785, 49.4478 )
stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="explosion_spaceship_sound" type="AudioStreamPlayer2D" parent="." index="15"]

position = Vector2( 246.785, 49.4478 )
stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ressurection_timer" type="Timer" parent="." index="16"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="enemy_timer" type="Timer" parent="." index="17"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="asteroids_timer" type="Timer" parent="." index="18"]

process_mode = 1
wait_time = 8.0
one_shot = false
autostart = false

[connection signal="dead" from="UI" to="." method="_on_UI_dead"]

[connection signal="timeout" from="ressurection_timer" to="." method="_on_ressurection_timer_timeout"]

[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]

[connection signal="timeout" from="asteroids_timer" to="." method="_on_asteroids_timer_timeout"]


